<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main"
        android:orderInCategory="101"
        android:title="@string/main"
        app:showAsAction="never" />
    <item
        android:id="@+id/loan"
        android:orderInCategory="101"
        android:title="@string/loan"
        app:showAsAction="never" />
    <item
        android:id="@+id/unit_conversion"
        android:orderInCategory="101"
        android:title="@string/unit_conversion"
        app:showAsAction="never" />
    <item
        android:id="@+id/currency"
        android:orderInCategory="101"
        android:title="@string/currency"
        app:showAsAction="never" />
</menu>